--- a/css/styles.css
+++ b/css/styles.css
@@ -5,17 +5,9 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: TimesNewRoman,"Times New Roman",Times,Baskerville,Georgia,serif;
+  font-family: Georgia,Times,Times New Roman,serif;
   font-weight: bolder;
 }
-
-
-h3 {
-  font-family: TimesNewRoman,"Times New Roman",Times,Baskerville,Georgia,serif;
-  font-weight: bolder;
-  font-size: 3.5rem;
-}
-
 
 p {
   color: #666666;
@@ -25,7 +17,6 @@ p {
 }
 
 /* Headings */
-
 .big-heading {
   font-size: 5rem;
   line-height: 1.5;
@@ -37,24 +28,19 @@ p {
 }
 
 /* Containers */
-
 .container-fluid {
   padding: 7% 15%;
 }
 
 /* Sections */
-
 .colored-section {
   background-color: #ff4c68;
   color: #fff;
 }
 
-/* .white(transparent)-section {
-  background-color is not white
-} */
+
 
 /* Navigation Bar */
-
 .navbar {
   padding: 0 0 4.5rem;
 }
@@ -71,17 +57,15 @@ p {
 
 .nav-link {
   font-size: 2rem;
-  font-weight:bold
+  font-weight:bold;
 }
 
 /* Download Buttons */
-
 .download-button {
   margin: 5% 2% 5% 0;
 }
 
 /* Title Section */
-
 #title {
   color: #fff;
   text-align: left;
@@ -92,7 +76,6 @@ p {
   }
 
 /* Title Image */
-
 .title-image {
   width: 60%;
   transform: rotate(25deg);
@@ -101,6 +84,10 @@ p {
 }
 
 /* features Section*/
+h3 {
+  font-weight: bolder;
+  font-size: 3.5rem;
+}
 
 #features {
  position: relative;
@@ -125,7 +112,6 @@ p {
 }
 
 /* Testimonial Section */
-
 #testimonials {
   background-color: darkgrey;
 }
@@ -142,7 +128,6 @@ p {
 }
 
 
-
 #press {
   background-color: darkgrey;
   padding-bottom: 3%;
@@ -154,7 +139,6 @@ p {
 }
 
 /* Pricing Section */
-
 #pricing {
   padding: 100px;
 }
@@ -168,17 +152,13 @@ p {
   padding: 3% 2%;
 }
 
-/* CTA section */
-
-
-
 /* Footer Section */
 
 .social-icon {
   margin: 20px 10px;
 }
 
-@media (max-width: 1028px) {
+@media (max-width: 1200px) {
   #title {
     text-align: center;
   }
